--- a/index.html
+++ b/index.html
@@ -4,11 +4,32 @@
     let randomNumber = Math.floor(Math.random() * 3);
     switch(randomNumber) {
       case 0:
-        return "Rock";
+        return "rock";
       case 1:
-        return "Paper";
+        return "paper";
       case 2:
-        return "Scissors";
+        return "scissors";
     }
   }
+  // Function that plays one round of the game
+  function playRound(playerSelection, computerSelection) {
+    if (playerSelection.toLowerCase() === computerSelection) {
+      return "It's a tie!";
+    } else if (playerSelection.toLowerCase() === "rock" && computerSelection === "scissors") {
+      return "You win! Rock beats Scissors";
+    } else if (playerSelection.toLowerCase() === "paper" && computerSelection === "rock") {
+      return "You win! Paper beats Rock";
+    } else if (playerSelection.toLowerCase() === "scissors" && computerSelection === "paper") {
+      return "You win! Scissors beats Rock";
+    } else if (playerSelection.toLowerCase() === "rock" && computerSelection === "paper") {
+      return "You lose! Paper beats Rock";
+    } else if (playerSelection.toLowerCase() === "paper" && computerSelection === "scissors") {
+      return "You lose! Scissors beats Paper";
+    } else if (playerSelection.toLowerCase() === "scissors" && computerSelection === "rock") {
+      return "You lose! Rock beats Scissors";
+    }
+  }
+  // const playerSelection = "Rock";
+  // const computerSelection = getComputerChoice();
+  // console.log(playRound(playerSelection, computerSelection));
 </script>
