--- a/index.html
+++ b/index.html
@@ -16,20 +16,64 @@
     if (playerSelection.toLowerCase() === computerSelection) {
       return "It's a tie!";
     } else if (playerSelection.toLowerCase() === "rock" && computerSelection === "scissors") {
-      return "You win! Rock beats Scissors";
+      console.log("You win Rock beats Scissors");
+      return true;
     } else if (playerSelection.toLowerCase() === "paper" && computerSelection === "rock") {
-      return "You win! Paper beats Rock";
+      console.log("You win! Paper beats Rock");
+      return true;
     } else if (playerSelection.toLowerCase() === "scissors" && computerSelection === "paper") {
-      return "You win! Scissors beats Rock";
+      console.log("You win! Scissors beats Rock");
+      return true;
     } else if (playerSelection.toLowerCase() === "rock" && computerSelection === "paper") {
-      return "You lose! Paper beats Rock";
+      console.log("You lose! Paper beats Rock");
+      return false;
     } else if (playerSelection.toLowerCase() === "paper" && computerSelection === "scissors") {
-      return "You lose! Scissors beats Paper";
+      console.log("You lose! Scissors beats Paper");
+      return false;
     } else if (playerSelection.toLowerCase() === "scissors" && computerSelection === "rock") {
-      return "You lose! Rock beats Scissors";
+      console.log("You lose! Rock beats Scissors");
+      return false;
     }
   }
-  // const playerSelection = "Rock";
-  // const computerSelection = getComputerChoice();
-  // console.log(playRound(playerSelection, computerSelection));
+
+  // A function to update the game total scores for player and computer
+  function updateScore(roundResult) {
+    if (roundResult === true) {
+      playerScore++;
+    } else if (roundResult === false) {
+      computerScore++;
+    } else {
+      console.log("It's a tie, score stays the same.")
+    }
+    console.log(`Player Score: ${playerScore} Computer Score: ${computerScore}`)
+  }
+
+  // A function to retrieve the winner of the game after 5 rounds
+  function getWinner() {
+    if (playerScore > computerScore) {
+      console.log(`You win! ${playerScore} - ${computerScore}`);
+    } else if (playerScore < computerScore) {
+      console.log(`Computer wins! ${computerScore} - ${playerScore}`);
+    } else {
+      console.log(`No winner, it's a tie!`);
+    }
+  }
+
+  // A function to play 5 rounds of the game to determine a winner
+  let roundCount = 0;
+  let playerScore = 0;
+  let computerScore = 0;
+  function playGame() {
+    while (roundCount < 5) {
+    const playerSelection = prompt("What will you play? Rock, Paper, or Scissors: ");
+    const computerSelection = getComputerChoice();
+    let roundResult = playRound(playerSelection, computerSelection);
+    updateScore(roundResult);
+    roundCount++
+    }
+  }
+
+  playGame();
+  getWinner();
+  
 </script>
